---------------------------------------------------------------------------------------------------
Version: 0.1.4
  Minor Features:
    - Add `--version` argument
    - Add a human readable header stating the Phobos version in output files with `--use-load`
    - Support files with a shebang
    - Handle invalid nodes in the formatter
    - Implement parsing and compiling as 32 bit signed integer numbers instead of doubles
  Changes:
    - Change output of `--use-load` making it 40-50% smaller, a little bit bigger than raw bytecode
    - Emit null strings in bytecode wherever null is valid instead of falling back to ""
    - Replace `stat_elem` internally everywhere by using intrusive linked lists
    - Parse malformed numbers just like Lua parses them resulting in more useful syntax errors
  Bugfixes:
    - Fix 'lua.exe' not finding 'lua52.dll' because it was called 'lua.dll'
    - Fix '(foo())' being a valid statement
    - Fix strings in invalid contexts generating invalid AstTokenNodes or failing assertions
    - Fix the local variable for 'fornum' being in the parent scope in the AST
    - Fix unterminated block strings with leading newlines missing said newline in the invalid node
    - Fix unterminated block comments not emitting invalid nodes, so no syntax errors
    - Fix potentially invalid or broken bytecode in functions with more than 256 constants
    - Fix hexadecimal numbers with hex letters in their exponent (malformed) failing assertions
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2022-02-17
  Minor Features:
    - Add error codes. Makes errors much easier to distinguish when using Phobos as a library
    - Keep all data about the source in the AST regardless of how many syntax errors there might be
  Bugfixes:
    - Fix every package missing the 'lib' and 'optimize' sub directories. 0.1.2 was/is unusable