@@ -122,6 +122,19 @@ local args = arg_parser.parse_and_print_on_error_or_help({...}, {
       flag = true,
     },
     {
+      field = "custom_header",
+      long = "custom-header",
+      description = "With '--use-load', add custom text to the header\n\z
+                     at the top of all output files.\n\z
+                     This string may contain '{filename}', which will\n\z
+                     be replaced with the relative path from '--source'\n\z
+                     with '/' separators and including the extension.\n\z
+                     Every string passed to this arg is a separate line",
+      min_params = 1,
+      type = "string",
+      optional = true,
+    },
+    {
       field = "pho_extension",
       long = "pho-extension",
       description = "The file extension of Phobos files.",
@@ -202,6 +215,10 @@ if args.help then return end
 if args.version then
   print_version()
   return
+end
+
+if args.custom_header and not args.use_load then
+  error("'--custom-header' can only be used in combination with '--use-load'.")
 end
 
 if args.monitor_memory_allocation then
@@ -500,9 +517,18 @@ if success then
       end
       local output
       if args.use_load then
+        local custom_header = ""
+        if args.custom_header then
+          local parts = {"\n----------------------------------------------------------------"}
+          for j, line in ipairs(args.custom_header) do
+            -- removing \r and \n just in case someone somehow manges to sneak those in
+            parts[j + 1] = line:gsub("[\r\n]+", ""):gsub("{filename}", source_file:sub(#source_dir + 1):str())
+          end
+          custom_header = table.concat(parts, "\n-- ")
+        end
         output = "\z
           ----------------------------------------------------------------\n\z
-          -- This file was generated by Phobos version "..format_version().."\n\z
+          -- This file was generated by Phobos version "..format_version()..custom_header.."\n\z
           ----------------------------------------------------------------\n\z
           local main_chunk=assert(load(\""..util.to_binary_string(bytecode, true).."\",nil,'b'))\n\z
           return main_chunk(...)\z
